changing photo in about section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <div class="about-content">
             <div class="image">
-              <img src="../images/land.avif" alt="photo">
+              <img src="../images/landing.jpg" alt="photo">
             </div>
             <div class="text">
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates veritatis soluta alias deleniti. Reiciendis sunt fuga, quos a placeat iste, saepe soluta at laborum quam possimus labore perferendis! Nihil, ullam!</p>
